2017/13 modify22: url_for rename reverse

--- a/templates/userlist.html
+++ b/templates/userlist.html
@@ -18,6 +18,7 @@
     </style>
 <body>
     <table border="1">
+        <a href="{{ reverse('login') }}">跳转到登录页面</a>
         <thead>
             <tr>
                 <th class="mycolor">ID</th>
@@ -26,7 +27,7 @@
             </tr>
         </thead>
         <tbody>
-            <span class="header-title">hy</span>
+            <p><span class="header-title">hy</span></p>
         </tbody>
     </table>
 </body>
